--- a/index.html
+++ b/index.html
@@ -14,39 +14,81 @@
         <script src="./js/bootstrap.bundle.min.js" defer></script>
         <script src="./js/headerBooksScript.js" defer></script>
         <script src="./js/shoppingCartScript.js" defer></script>
-        <!-- <script type="text/javascript" src="./js/booksScript.js"></script> -->
         <title>Bootstrap 5 Starter</title>
     </head>
-    <section class="w-100 z-5">Hello</section>
     <body id="body w-100">
-        <!-- <section
-            id="cart-summary-container"
+        <section
+            id="cart-summary-section"
             class="position-fixed end-0 visually-hidden z-3"
         >
             <div
                 class="container bg-white h-100 border border-2 rounded-2 shadow-lg overflow-scroll"
             >
-                Hello there
-            </div>
-        </section> -->
+                <h5 class="text-center text-secondary my-3">Shopping cart</h5>
+                <div id="cart-summary-container"></div>
 
-        <header class="header vh-100 w-100">
+                <h5
+                    class="cart-total-title visually-hidden text-center text-secondary mt-5 mb-1 fw-lighter fs-3"
+                >
+                    Total
+                </h5>
+                <p
+                    data-cart-total
+                    class="border border-1 border-secondary text-center"
+                ></p>
+            </div>
+        </section>
+
+        <header class="header w-100">
             <!-- Navigation -->
             <nav
                 id="navbar"
                 class="navbar navbar-expand-lg fixed-top navbar-white bg-primary vw-100"
             >
-                <div class="container">
-                    <!-- <a class="navbar-brand" href="#">
+                <div class="container d-flex">
+                    <a class="navbar-brand" href="#">
                         <i class="fa-solid fa-book-open"></i>
                         Bookstore</a
-                    > -->
+                    >
 
                     <div
-                        class="collapse navbar-collapse"
+                        class="order-0 order-lg-2 d-flex justify-content-center"
+                    >
+                        <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavDropdown"
+                        >
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div
+                            class="d-flex justify-content-center align-items-center ms-2 ms-sm-3 ms-lg-4"
+                        >
+                            <button
+                                id="cart-button"
+                                class="bg-primary fs-5 text-secondary border-0"
+                            >
+                                <i
+                                    class="fa-solid fa-cart-shopping fa-lg opacity-75 p-1"
+                                ></i
+                                ><span
+                                    id="cart-badge"
+                                    class="badge bg-secondary text-primary rounded-5"
+                                >
+                                    1
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div
+                        class="collapse navbar-collapse z-5"
                         id="navbarNavDropdown"
                     >
-                        <ul class="navbar-nav ms-auto align-items-center">
+                        <ul
+                            class="order-2 order-lg-0 navbar-nav ms-auto align-items-center"
+                        >
                             <li class="nav-item">
                                 <a href="#details" class="nav-link fw-semibold"
                                     >About</a
@@ -61,7 +103,9 @@
                                 >
                             </li>
                         </ul>
-                        <form class="d-flex align-items-center">
+                        <form
+                            class="order-1 order-lg-1 d-flex align-items-center"
+                        >
                             <input
                                 class="form-control search-input me-2 h-75"
                                 type="search"
@@ -75,34 +119,6 @@
                                 Search
                             </button>
                         </form>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <button
-                            class="navbar-toggler"
-                            type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#navbarNavDropdown"
-                        >
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div
-                            class="d-flex justify-content-center align-items-center ms-3 ms-lg-2"
-                        >
-                            <button
-                                id="cart-button"
-                                class="btn btn-secondary border-0"
-                            >
-                                <i
-                                    class="fa-solid fa-cart-shopping fa-1x opacity-75 p-1"
-                                ></i>
-                                <!-- <div
-                                    id="cart-badge"
-                                    class="badge bg-primary text-secondary rounded-5"
-                                >
-                                    1
-                                </div> -->
-                            </button>
-                        </div>
                     </div>
                 </div>
             </nav>
@@ -479,9 +495,7 @@
                                 data-book-category
                                 class="badge bg-secondary"
                             ></p>
-                            <p data-book-price class="card-text">
-                                Published date
-                            </p>
+                            <p data-book-price class="card-text">Price</p>
                             <button
                                 class="btn btn-sm btn-secondary"
                                 data-add-to-basket-book-button
@@ -493,6 +507,49 @@
                 </div>
             </div>
         </template>
+
+        <!-- SHOPPING SUMMARY CARD -->
+
+        <template id="shopping-summary-card-template">
+            <div
+                class="shopping-summary-card card shadow border my-1"
+                data-cart-book-id
+            >
+                <div
+                    class="card-body d-flex flex-md-column align-items-center justify-content-center text-center"
+                >
+                    <div
+                        class="d-flex justify-content-between align-items-cente"
+                    >
+                        <img
+                            src="..."
+                            class="card-img-top pb-2 me-2"
+                            alt="..."
+                            data-cart-book-img
+                        />
+                        <div class="d-flex flex-column justify-content-center">
+                            <p data-cart-book-title class="card-title">
+                                Card title
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="d-flex align-items-center justify-content-center mb-3"
+                >
+                    <span data-cart-book-quantity class="text-center"></span>
+                    <span class="text-secondary">x</span>
+                    <span data-cart-book-price class="card-text">Price</span>
+                    <button
+                        data-cart-book-remove
+                        class="ms-2 btn text-danger border-0"
+                    >
+                        <i class="fa-solid fa-trash-can"></i>
+                    </button>
+                </div>
+            </div>
+        </template>
+
         <footer class="bg-primary text-white text-center py-3">
             <p class="m-0">
                 &copy; 2024 Myky's Bookstore. All rights reserved.
