--- a/index.html
+++ b/index.html
@@ -512,9 +512,33 @@
 
         <template id="shopping-summary-card-template">
             <div
-                class="shopping-summary-card card shadow border my-1"
+                class="shopping-summary-card card shadow border my-1 position-relative"
                 data-cart-book-id
             >
+                <div
+                    class="remove-item-modal-backdrop bg-dark position-absolute h-100 w-100 opacity-75 visually-hidden"
+                ></div>
+                <div
+                    class="remove-item-modal position-absolute d-flex flex-column bg-white border shadow visually-hidden"
+                >
+                    <div
+                        class="remove-item-modal-header text-center border-bottom"
+                    >
+                        Remove this item?
+                    </div>
+                    <div class="remove-item-modal-body m-auto">
+                        <button
+                            class="remove-item-modal-btn remove-item-modal-btn-yes btn btn-sm btn-danger"
+                        >
+                            YES
+                        </button>
+                        <button
+                            class="remove-item-modal-btn btn btn-sm btn-secondary"
+                        >
+                            CANCEL
+                        </button>
+                    </div>
+                </div>
                 <div
                     class="card-body d-flex flex-md-column align-items-center justify-content-center text-center"
                 >
@@ -528,21 +552,24 @@
                             data-cart-book-img
                         />
                         <div class="d-flex flex-column justify-content-center">
-                            <p data-cart-book-title class="card-title">
+                            <p
+                                data-cart-book-title
+                                class="card-title overflow-auto"
+                            >
                                 Card title
                             </p>
                         </div>
                     </div>
                 </div>
                 <div
-                    class="d-flex align-items-center justify-content-center mb-3"
+                    class="d-flex align-items-center justify-content-center m-2 border-1 border-top"
                 >
                     <span data-cart-book-quantity class="text-center"></span>
                     <span class="text-secondary">x</span>
                     <span data-cart-book-price class="card-text">Price</span>
                     <button
                         data-cart-book-remove
-                        class="ms-2 btn text-danger border-0"
+                        class="cart-remove-item-btn ms-2 btn text-danger border-0"
                     >
                         <i class="fa-solid fa-trash-can"></i>
                     </button>
