--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div
-                            class="d-flex justify-content-center align-items-center ms-2 ms-sm-3 ms-lg-4"
+                            class="cart-button-container d-flex justify-content-center align-items-center ms-2 ms-sm-3 ms-lg-4"
                         >
                             <button
                                 id="cart-button"
@@ -73,8 +73,8 @@
                                     class="fa-solid fa-cart-shopping fa-lg opacity-75 p-1"
                                 ></i
                                 ><span
-                                    id="cart-badge"
-                                    class="badge bg-secondary text-primary rounded-5"
+                                    id="cart-quantity-badge"
+                                    class="badge bg-secondary text-primary rounded-5 visually-hidden"
                                 >
                                     1
                                 </span>
@@ -533,7 +533,7 @@
                             YES
                         </button>
                         <button
-                            class="remove-item-modal-btn btn btn-sm btn-secondary"
+                            class="remove-item-modal-btn remove-item-modal-btn-no btn btn-sm btn-secondary"
                         >
                             CANCEL
                         </button>
@@ -577,7 +577,7 @@
             </div>
         </template>
 
-        <footer class="bg-primary text-white text-center py-3">
+        <footer class="bg-primary text-secondary text-center py-3">
             <p class="m-0">
                 &copy; 2024 Myky's Bookstore. All rights reserved.
             </p>
