Github layout fix

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div
-                            class="cart-button-container d-flex justify-content-center align-items-center ms-2 ms-sm-3 ms-lg-4"
+                            class="cart-button-container d-flex justify-content-center align-items-center"
                         >
                             <button
                                 id="cart-button"
