--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 
         <template id="shopping-summary-card-template">
             <div
-                class="shopping-summary-card card shadow border my-1 position-relative"
+                class="shopping-summary-card card border border-1 my-3 position-relative"
                 data-cart-book-id
             >
                 <div
@@ -562,7 +562,7 @@
                     </div>
                 </div>
                 <div
-                    class="d-flex align-items-center justify-content-center m-2 border-1 border-top"
+                    class="d-flex align-items-center justify-content-center m-2 border-1 border-dark border-top"
                 >
                     <span data-cart-book-quantity class="text-center"></span>
                     <span class="text-secondary">x</span>
