Shopping cart summary styling

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </h5>
                 <p
                     data-cart-total
-                    class="border border-1 border-secondary text-center"
+                    class="border border-1 border-secondary text-center visually-hidden"
                 ></p>
             </div>
         </section>
