Shopping cart summary styling

--- a/index.html
+++ b/index.html
@@ -512,14 +512,14 @@
 
         <template id="shopping-summary-card-template">
             <div
-                class="shopping-summary-card card border border-1 my-3 position-relative"
+                class="shopping-summary-card card border border-1 my-3 position-relative rounded-2"
                 data-cart-book-id
             >
                 <div
                     class="remove-item-modal-backdrop bg-dark position-absolute h-100 w-100 opacity-75 visually-hidden"
                 ></div>
                 <div
-                    class="remove-item-modal position-absolute d-flex flex-column bg-white border shadow visually-hidden"
+                    class="remove-item-modal rounded-2 position-absolute d-flex flex-column bg-white border shadow visually-hidden"
                 >
                     <div
                         class="remove-item-modal-header text-center border-bottom"
