Shopping cart summary styling

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                             >
                                 <i
                                     class="fa-solid fa-cart-shopping fa-lg opacity-75 p-1"
-                                ></i
-                                ><span
-                                    id="cart-quantity-badge"
-                                    class="badge bg-secondary text-primary rounded-5 visually-hidden"
-                                >
-                                    1
-                                </span>
+                                ></i>
                             </button>
+                            <span
+                                id="cart-quantity-badge"
+                                class="ms-1 badge bg-secondary text-primary rounded-5 visually-hidden"
+                            >
+                                1
+                            </span>
                         </div>
                     </div>
 
