--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
                                 <i
                                     class="fa-solid fa-cart-shopping fa-lg opacity-75 p-1"
                                 ></i>
+                                <span
+                                    id="cart-quantity-badge"
+                                    class="badge bg-secondary text-primary rounded-5 visually-hidden"
+                                >
+                                </span>
                             </button>
-                            <span
-                                id="cart-quantity-badge"
-                                class="ms-1 badge bg-secondary text-primary rounded-5 visually-hidden"
-                            >
-                                1
-                            </span>
                         </div>
                     </div>
 
