--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                         <div
                             class="cart-button-container d-flex justify-content-center align-items-center"
                         >
-                            <button
+                            <div
                                 id="cart-button"
-                                class="bg-primary fs-5 text-secondary border-0"
+                                class="bg-primary fs-5 text-secondary border-0 d-flex align-items-center"
                             >
                                 <i
                                     class="fa-solid fa-cart-shopping fa-lg opacity-75 p-1"
@@ -77,7 +77,7 @@
                                     class="badge bg-secondary text-primary rounded-5 visually-hidden"
                                 >
                                 </span>
-                            </button>
+                            </div>
                         </div>
                     </div>
 
