Shopping cart summary styling

--- a/index.html
+++ b/index.html
@@ -486,8 +486,18 @@
                             alt="..."
                             data-book-img
                         />
-                        <h5 data-book-title class="card-title">Card title</h5>
-                        <p data-book-author class="card-text">Author</p>
+                        <h5
+                            data-book-title
+                            class="d-flex card-title overflow-auto align-items-center"
+                        >
+                            Card title
+                        </h5>
+                        <p
+                            data-book-author
+                            class="d-flex card-text overflow-auto align-items-start"
+                        >
+                            Author
+                        </p>
                         <div>
                             <p
                                 class="badge bg-secondary"
