Shopping cart summary styling

--- a/index.html
+++ b/index.html
@@ -482,13 +482,13 @@
                     >
                         <img
                             src="..."
-                            class="card-img-top pb-2"
+                            class="card-img-top border rounded-2"
                             alt="..."
                             data-book-img
                         />
                         <h5
                             data-book-title
-                            class="d-flex card-title overflow-auto align-items-center"
+                            class="d-flex card-title overflow-auto align-items-center pt-3"
                         >
                             Card title
                         </h5>
@@ -556,11 +556,13 @@
                     >
                         <img
                             src="..."
-                            class="card-img-top pb-2 me-2"
+                            class="card-img-top border rounded-2 me-2"
                             alt="..."
                             data-cart-book-img
                         />
-                        <div class="d-flex flex-column justify-content-center">
+                        <div
+                            class="d-flex flex-column justify-content-center pt-2"
+                        >
                             <p
                                 data-cart-book-title
                                 class="card-title overflow-auto"
