--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
         <template id="genre-books-card-template">
             <div class="genre-books-card card shadow border" data-genre-book-id>
                 <div
-                    class="card-body d-flex flex-md-column align-items-center justify-content-center text-center"
+                    class="card-body d-flex flex-md-column align-items-between justify-content-center text-center"
                 >
                     <div
                         class="d-flex flex-column justify-content-between align-items-center"
