Shopping cart summary styling

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                         </h5>
                         <p
                             data-book-author
-                            class="d-flex card-text overflow-auto align-items-start"
+                            class="d-flex card-text overflow-auto align-items-center"
                         >
                             Author
                         </p>
