Shopping cart summary styling

--- a/index.html
+++ b/index.html
@@ -482,13 +482,13 @@
                     >
                         <img
                             src="..."
-                            class="card-img-top border rounded-2"
+                            class="card-img-top border rounded-2 mb-3"
                             alt="..."
                             data-book-img
                         />
                         <h5
                             data-book-title
-                            class="d-flex card-title overflow-auto align-items-center pt-3"
+                            class="d-flex card-title overflow-auto align-items-center pt-2"
                         >
                             Card title
                         </h5>
