--- a/index.html
+++ b/index.html
@@ -549,14 +549,14 @@
                     </div>
                 </div>
                 <div
-                    class="card-body d-flex flex-md-column align-items-center justify-content-center text-center"
+                    class="card-body d-flex flex-md-column align-items-center text-center"
                 >
                     <div
-                        class="d-flex justify-content-between align-items-cente"
+                        class="d-flex justify-content-between align-items-center"
                     >
                         <img
                             src="..."
-                            class="card-img-top border rounded-2 me-2"
+                            class="card-img-top border rounded-2 me-3"
                             alt="..."
                             data-cart-book-img
                         />
