--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             class="position-fixed end-0 visually-hidden z-3"
         >
             <div
-                class="container bg-white h-100 border border-2 rounded-2 shadow-lg overflow-scroll"
+                class="container bg-white h-100 border border-3 border-dark rounded-2 shadow-lg overflow-scroll"
             >
                 <h5 class="text-center text-secondary my-3">Shopping cart</h5>
                 <div id="cart-summary-container"></div>
