Shopping cart summary styling

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                         />
                         <h5
                             data-book-title
-                            class="d-flex card-title overflow-auto align-items-center pt-2"
+                            class="card-title overflow-auto pt-2"
                         >
                             Card title
                         </h5>
