--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
         <link rel="stylesheet" href="./css/bootstrap.css" />
         <link rel="stylesheet" href="./css/styles.css" />
         <script src="./js/bootstrap.bundle.min.js" defer></script>
+        <script scr="./utils/saveToLocalStorage.js" type="module"></script>
+        <script scr="./utils/loadFromLocalStorage.js" type="module"></script>
         <script src="./js/headerBooksScript.js" defer></script>
-        <script src="./js/shoppingCartScript.js" defer></script>
+        <script src="./js/shoppingCartScript.js" type="module"></script>
+
         <title>Bootstrap 5 Starter</title>
     </head>
     <body id="body w-100">
@@ -39,14 +42,14 @@
             </div>
         </section>
 
-        <header class="header w-100">
+        <header class="header header-full-screen w-100">
             <!-- Navigation -->
             <nav
                 id="navbar"
-                class="navbar navbar-expand-lg fixed-top navbar-white bg-primary vw-100"
+                class="navbar navbar-animation-on navbar-expand-lg fixed-top navbar-white bg-primary vw-100"
             >
                 <div class="container d-flex">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="index.html">
                         <i class="fa-solid fa-book-open"></i>
                         Bookstore</a
                     >
@@ -89,7 +92,9 @@
                             class="order-2 order-lg-0 navbar-nav ms-auto align-items-center"
                         >
                             <li class="nav-item">
-                                <a href="#details" class="nav-link fw-semibold"
+                                <a
+                                    href="about.html"
+                                    class="nav-link fw-semibold"
                                     >About</a
                                 >
                             </li>
@@ -473,7 +478,10 @@
         <!-- BOOK CARD  -->
 
         <template id="genre-books-card-template">
-            <div class="genre-books-card card shadow border" data-genre-book-id>
+            <div
+                class="genre-books-card card shadow border overflow-hidden"
+                data-genre-book-id
+            >
                 <div
                     class="card-body d-flex flex-md-column align-items-between justify-content-center text-center"
                 >
