Search button redirection

--- a/about.html
+++ b/about.html
@@ -105,20 +105,20 @@
                             </li>
                         </ul>
                         <form
-                            class="order-1 order-lg-1 d-flex align-items-center visually-hidden"
+                            class="order-1 order-lg-1 d-flex align-items-center"
                         >
                             <input
-                                class="form-control search-input me-2 h-75"
+                                class="form-control search-nav-input me-2 h-75"
                                 type="search"
                                 placeholder="Search"
                                 aria-label="Search"
                             />
-                            <button
-                                class="btn btn-secondary search-btn search-btn-secondary"
-                                type="submit"
+                            <a
+                                class="search-btn-nav btn btn-secondary search-btn-secondary"
+                                href="index.html#genre-books-container"
                             >
                                 Search
-                            </button>
+                            </a>
                         </form>
                     </div>
                 </div>
