--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="./js/bootstrap.bundle.min.js" defer></script>
         <script scr="./utils/saveToLocalStorage.js" type="module"></script>
         <script scr="./utils/loadFromLocalStorage.js" type="module"></script>
-        <script src="./js/headerBooksScript.js" defer></script>
+        <script src="./js/headerBooksScript.js" type="module"></script>
         <script src="./js/shoppingCartScript.js" type="module"></script>
 
         <title>Bootstrap 5 Starter</title>
@@ -118,7 +118,6 @@
                             />
                             <button
                                 class="btn btn-secondary search-btn search-btn-secondary"
-                                type="submit"
                             >
                                 Search
                             </button>
