Search button redirection

--- a/about.html
+++ b/about.html
@@ -113,12 +113,11 @@
                                 placeholder="Search"
                                 aria-label="Search"
                             />
-                            <a
+                            <button
                                 class="search-btn-nav btn btn-secondary search-btn-secondary"
-                                href="index.html#genre-books-container"
                             >
                                 Search
-                            </a>
+                            </button>
                         </form>
                     </div>
                 </div>
