--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <li class="nav-item">
                                 <a
                                     href="about.html"
-                                    class="nav-link fw-semibold"
+                                    class="nav-link fw-semibold mt-3 mt-lg-0"
                                     >About</a
                                 >
                             </li>
