--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                             <li class="nav-item">
                                 <a
                                     href="about.html"
-                                    class="nav-link fw-semibold active"
+                                    class="nav-link fw-semibold active mt-3 mt-lg-0"
                                     >About</a
                                 >
                             </li>
