Navbar styling adjustment

--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                                 <a
                                     href="contact.html"
                                     id="contact-link"
-                                    class="nav-link fw-semibold btn btn-outline-light px-4 mx-4"
+                                    class="nav-link fw-semibold btn btn-outline-light px-4 mx-4 mb-2"
                                     >Contact</a
                                 >
                             </li>
