--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                                 <a
                                     href="contact.html"
                                     id="contact-link"
-                                    class="nav-link fw-semibold btn btn-primary px-4 mx-4 active mb-2"
+                                    class="nav-link fw-semibold btn btn-primary px-4 mx-4 active mb-2 mb-lg-0"
                                     >Contact</a
                                 >
                             </li>
