--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <a
                                     href="contact.html"
                                     id="contact-link"
-                                    class="nav-link fw-semibold btn btn-outline-light px-4 mx-4 mb-2"
+                                    class="nav-link fw-semibold btn btn-outline-light px-4 mx-4 mb-2 mb-lg-0"
                                     >Contact</a
                                 >
                             </li>
