--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                             </li>
                         </ul>
                         <form
-                            class="order-1 order-lg-1 d-flex align-items-center"
+                            class="order-1 order-lg-1 d-flex align-items-center pt-1 pt-lg-0"
                         >
                             <input
                                 class="form-control search-nav-input me-2 h-75"
