Contact form functionality

--- a/contact.html
+++ b/contact.html
@@ -141,8 +141,8 @@
         </div>
         <div class="bg-white py-5">
             <form
-                action="https://getform.io/f/lbjkvqva"
                 method="POST"
+                action="https://getform.io/f/lbjkvqva"
                 class="contact-form bg-white contact-form border border-1 border-secondary rounded-2 p-4 w-50 mx-auto"
             >
                 <h3 class="text-center text-secondary fw-lighter">
@@ -156,6 +156,7 @@
                         class="form-control border"
                         id="name"
                         placeholder="Enter your name"
+                        required
                     />
                 </div>
                 <div class="mb-3">
@@ -166,6 +167,7 @@
                         class="form-control border"
                         id="email"
                         placeholder="Enter your email"
+                        required
                     />
                 </div>
                 <div class="mb-3">
@@ -176,6 +178,7 @@
                         name="message"
                         rows="3"
                         placeholder="Enter your message"
+                        required
                     ></textarea>
                 </div>
                 <!-- add hidden Honeypot input to prevent spams -->
