Form submission alert removal

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,8 @@
         <link rel="stylesheet" href="./css/fontawesome.css" />
         <link rel="stylesheet" href="./css/bootstrap.css" />
         <link rel="stylesheet" href="./css/styles.css" />
-        <script src="./js/bootstrap.bundle.min.js" defer></script>
+
+        <script src="./js/bootstrap.bundle.min.js" type="module"></script>
         <script src="./js/navbar.js" type="module"></script>
         <script src="./js/shoppingCartScript.js" type="module"></script>
         <script src="./js/contactForm.js" type="module"></script>
@@ -239,9 +240,9 @@
                         class="d-flex justify-content-between align-items-center"
                     >
                         <img
-                            src="..."
+                            src="./images/Icons/book_placeholder.png"
                             class="card-img-top border rounded-2 me-3"
-                            alt="..."
+                            alt="Book Cover"
                             data-cart-book-img
                         />
                         <div
