--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="./css/fontawesome.css" />
         <link rel="stylesheet" href="./css/bootstrap.css" />
         <link rel="stylesheet" href="./css/styles.css" />
-        <script src="./js/bootstrap.bundle.min.js" defer></script>
+        <script src="./js/bootstrap.bundle.min.js" type="module"></script>
         <script scr="./utils/saveToLocalStorage.js" type="module"></script>
         <script scr="./utils/loadFromLocalStorage.js" type="module"></script>
         <script src="./js/headerBooksScript.js" type="module"></script>
@@ -352,7 +352,7 @@
                             <div
                                 class="container d-flex justify-content-center w-100"
                             >
-                                <nav aria-label="...">
+                                <nav aria-label="">
                                     <ul
                                         class="pagination p-4 p-md-5 text-secondary"
                                     >
@@ -432,9 +432,9 @@
                                 class="card-body d-flex align-items-center justify-content-center"
                             >
                                 <img
-                                    src="..."
+                                    src="./images/Icons/book_placeholder.png"
                                     class="card-img-top me-3 me-md-5 rounded-3 border"
-                                    alt="..."
+                                    alt="Book Cover"
                                     data-recommended-book-img
                                 />
                                 <div
@@ -491,9 +491,9 @@
                         class="d-flex flex-column justify-content-between align-items-center"
                     >
                         <img
-                            src="..."
+                            src="./images/Icons/book_placeholder.png"
                             class="card-img-top border rounded-2 mb-3"
-                            alt="..."
+                            alt="Book Cover"
                             data-book-img
                         />
                         <h5
@@ -565,9 +565,9 @@
                         class="d-flex justify-content-between align-items-center"
                     >
                         <img
-                            src="..."
+                            src="./images/Icons/book_placeholder.png"
                             class="card-img-top border rounded-2 me-3"
-                            alt="..."
+                            alt="Book Cover"
                             data-cart-book-img
                         />
                         <div
