Added to card popup

--- a/index.html
+++ b/index.html
@@ -429,6 +429,11 @@
                             class="recommended-books-card card w-sm-75 border-0 w-100 rounded-3 shadow mt-3 mb-5 mt-md-4 mb-md-5"
                         >
                             <div
+                                class="added-to-cart-popup position-absolute bg-secondary text-white fs-5 p-2 text-center z-3 shadow-lg rounded-3 align-self-center"
+                            >
+                                Added to cart
+                            </div>
+                            <div
                                 class="card-body d-flex align-items-center justify-content-center"
                             >
                                 <img
@@ -467,7 +472,7 @@
                                         class="btn btn-sm btn-secondary"
                                         data-recommended-book-button
                                     >
-                                        Add to basket
+                                        Add to cart
                                     </button>
                                 </div>
                             </div>
@@ -484,6 +489,11 @@
                 class="genre-books-card card shadow border overflow-hidden"
                 data-genre-book-id
             >
+                <div
+                    class="added-to-cart-popup position-absolute bg-secondary text-white fs-5 p-2 text-center z-3 shadow-lg rounded-3 align-self-center"
+                >
+                    Added to cart
+                </div>
                 <div
                     class="card-body d-flex flex-md-column align-items-between justify-content-center text-center"
                 >
@@ -519,7 +529,7 @@
                                 class="btn btn-sm btn-secondary"
                                 data-add-to-basket-book-button
                             >
-                                Add to basket
+                                Add to cart
                             </button>
                         </div>
                     </div>
