--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
         <script src="./js/bootstrap.bundle.min.js" type="module"></script>
         <script src="./js/navbar.js" type="module"></script>
         <script src="./js/shoppingCartScript.js" type="module"></script>
+        <script src="./js/footerSetYear.js" type="module"></script>
 
         <title>Bookstore</title>
     </head>
@@ -242,9 +243,10 @@
             </div>
         </template>
 
-        <footer class="bg-secondary text-primary text-center py-3">
+        <footer class="bg-primary text-secondary text-center py-3">
             <p class="m-0">
-                &copy; 2024 Myky's Bookstore. All rights reserved.
+                &copy; <span class=".current-year">2024</span> Designed by Myky.
+                All rights reserved.
             </p>
         </footer>
     </body>
