--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         />
         <link rel="stylesheet" href="./css/fontawesome.css" />
         <link rel="stylesheet" href="./css/bootstrap.css" />
-        <link rel="stylesheet" href="./css/styles.css" />
+        <link rel="stylesheet" href="./css/styles.prod.css" />
 
         <script src="./js/bootstrap.bundle.min.js" type="module"></script>
         <script scr="./utils/saveToLocalStorage.js" type="module"></script>
@@ -610,10 +610,17 @@
             </div>
         </template>
 
-        <footer class="bg-primary text-secondary text-center py-3">
+        <footer
+            class="bg-primary text-secondary text-center py-3 d-flex justify-content-center"
+        >
+            <img
+                width="20"
+                height="20"
+                src="./images/icons/creator-logo.png"
+                class="me-2"
+            />
             <p class="m-0">
-                &copy; <span class=".current-year">2024</span> Designed by Myky.
-                All rights reserved.
+                &copy; <span class=".current-year">2024</span> Designed by Myky
             </p>
         </footer>
     </body>
