--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         />
         <link rel="stylesheet" href="./css/fontawesome.css" />
         <link rel="stylesheet" href="./css/bootstrap.css" />
-        <link rel="stylesheet" href="./css/styles.css" />
+        <link rel="stylesheet" href="./css/styles.prod.css" />
 
         <script src="./js/bootstrap.bundle.min.js" type="module"></script>
         <script src="./js/navbar.js" type="module"></script>
