Add creator logo to the footer

--- a/about.html
+++ b/about.html
@@ -243,10 +243,17 @@
             </div>
         </template>
 
-        <footer class="bg-primary text-secondary text-center py-3">
+        <footer
+            class="bg-primary text-secondary text-center py-3 d-flex justify-content-center"
+        >
+            <img
+                width="20"
+                height="20"
+                src="./images/icons/creator-logo.png"
+                class="me-2"
+            />
             <p class="m-0">
-                &copy; <span class=".current-year">2024</span> Designed by Myky.
-                All rights reserved.
+                &copy; <span class=".current-year">2024</span> Designed by Myky
             </p>
         </footer>
     </body>
