Add creator logo

--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
                 class="me-2"
             />
             <p class="m-0">
-                &copy; <span class=".current-year">2024</span> Designed by Myky
+                &copy; <span class="current-year">2024</span> Designed by Myky
             </p>
         </footer>
     </body>
