--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                 class="me-2"
             />
             <p class="m-0">
-                &copy; <span class=".current-year">2024</span> Designed by Myky
+                &copy; <span class="current-year">2024</span> Designed by Myky
             </p>
         </footer>
     </body>
